# LoRaMac-node

./: .gitignore  LoRaMac-node.mex  README.md
board/: clock_config.c
cmake/: gdb-helper.cmake  lpc55.cmake  mk22f51212.cmake
doc/: Tardigrade-platform.md
src/: CMakeLists.txt
src/apps/LoRaMac/classA/B-L072Z-LRWAN1/: main.c
src/apps/LoRaMac/classA/NucleoL476/: Commissioning.h
src/apps/LoRaMac/classA/Tiny-Lacuna/: Commissioning.h  main.c
src/apps/LoRaMac/common/: Commissioning.h
src/apps/LoRaMac/periodic-uplink-lpp/Tardigrade/: main.c
src/apps/Tardigrade-Dev/: CMakeLists.txt
src/apps/Tardigrade-Dev/energy-mgmt/: main.c
src/apps/dev-application/: CMakeLists.txt
src/apps/dev-application/NucleoL476/: main.c
src/apps/dev-application/Tiny-Lacuna/: main.c
src/apps/ping-pong/Tardigrade/: main.c
src/apps/ping-pong/Tiny-Lacuna/: main.c
src/boards/: board.h  multiRfm96w-board.h  pinName-lpc.h  pinName-nxp.h  rfm96w-board.h  se050-board.h
src/boards/B-L072Z-LRWAN1/: CMakeLists.txt  board-config.h  board.c  gps-board.c  i2c-board.c  uart-board.c
src/boards/B-L072Z-LRWAN1-CUSTOM/: CMakeLists.txt  board-config.h  board.c  multiRfm96w-board.c  rfm96w-board.c  spi-board.c  sx1276-board.c
src/boards/Tardigrade/: CMakeLists.txt  adc-board.c  board-config.h  board.c  delay-board.c  eeprom-board.c  gpio-board.c  gps-board.c  i2c-board.c  lpm-board.c  rtc-board.c  spi-board.c  sx1262-board.c  uart-board.c
src/boards/Tardigrade/configs/: clock_config.c  pin_mux.c  pin_mux.h
src/boards/Tiny-Lacuna/: CMakeLists.txt  board-config.h  board.c  delay-board.c  gpio-board.c  gps-board.c  i2c-board.c  pin_mux.c  pin_mux.h  rtc-board.c  se050-board.c  spi-board.c  sx1262-board.c  uart-board.c
src/boards/Tiny-Lacuna/cmsis/: clock_config.c
src/mac/: CMakeLists.txt
src/peripherals/: CMakeLists.txt  se050.c
src/peripherals/atecc608a-tnglora-se/: atca_config.h  atecc608a-tnglora-se-hal.c  atecc608a-tnglora-se.c
src/peripherals/se050/: se050.c
src/peripherals/se050/hostlib/hostLib/inc/: HLSEComm.h  HLSEMisc.h  HLSETypes.h  PlugAndTrust_HostLib_Ver.h  PlugAndTrust_Pkg_Ver.h  a71ch_api.h  ax_api.h  ax_common.h  ax_common_a71ch.h  ax_common_a71cl.h  ax_util.h  nxEnsure.h  nxScp03_Const.h  nxScp03_Types.h  scp.h  se05x_const.h  se05x_ecc_curves.h  se05x_ecc_curves_inc.h  se05x_ecc_curves_values.h  se05x_enums.h  se05x_ftr.h  se05x_tlv.h  sm_const.h
src/peripherals/se050/hostlib/hostLib/libCommon/infra/: a71_debug.h  app_boot.h  app_boot_nfc.h  global_platf.c  global_platf.h  nxLog.c  nxLog.h  nxLog_App.h  nxLog_DefaultConfig.h  nxLog_hostLib.h  nxLog_mbedtls.h  nxLog_scp.h  nxLog_smCom.h  nxLog_sss.h  sm_apdu.c  sm_apdu.h  sm_api.h  sm_connect.c  sm_errors.c  sm_errors.h  sm_printf.c  sm_types.h
src/peripherals/se050/hostlib/hostLib/libCommon/nxScp/: nxScp03_Com.c
src/peripherals/se050/hostlib/hostLib/libCommon/scp/: scp.c
src/peripherals/se050/hostlib/hostLib/libCommon/smCom/: apduComm.h  smCom.c  smCom.h  smComT1oI2C.c  smComT1oI2C.h
src/peripherals/se050/hostlib/hostLib/libCommon/smCom/T1oI2C/: phNxpEsePal_i2c.c  phNxpEsePal_i2c.h  phNxpEseProto7816_3.c  phNxpEseProto7816_3.h  phNxpEse_Api.c  phNxpEse_Api.h  phNxpEse_Internal.h
src/peripherals/se050/hostlib/hostLib/mbedtls/inc/: a71ch_mbedtls_evkbimxrt1050_config.h  a71ch_mbedtls_frdm_config.h
src/peripherals/se050/hostlib/hostLib/mbedtls/src/: ecdh_alt.c
src/peripherals/se050/hostlib/hostLib/platform/inc/: ax_reset.h  i2c_a7.h  se05x_apis.h  se_pit_config.h  se_reset_config.h  sm_printf.h  sm_timer.h
src/peripherals/se050/hostlib/hostLib/platform/ksdk/: ax_reset.c  i2c_frdm.c  i2c_imxrt10xx.c  i2c_lpc54xxx.c  i2c_lpc55sxx.c  se05x_reset.c  timer_kinetis.c  timer_kinetis_bm.c
src/peripherals/se050/hostlib/hostLib/se05x/src/: se05x_ECC_curves.c  se05x_mw.c  se05x_tlv.c
src/peripherals/se050/hostlib/hostLib/se05x_03_xx_xx/: Applet_SE050_Ver.h  se05x_APDU.c  se05x_APDU.h  se05x_APDU_apis.h  se05x_APDU_impl.h
src/peripherals/se050/mbedtls/include/mbedtls/: config.h  ctr_drbg.h  rsa.h
src/peripherals/se050/mbedtls/port/ksdk/: ecp_alt.c  ecp_alt_ksdk.c  ksdk_mbedtls.c  ksdk_mbedtls_config.h
src/peripherals/se050/sss/ex/inc/: ex_sss.h  ex_sss_auth.h  ex_sss_boot.h  ex_sss_main_freeRTOS_inc.h  ex_sss_main_inc.h  ex_sss_main_inc_frdmk64f.h  ex_sss_main_inc_imx_rt.h  ex_sss_main_inc_lpcxpresso55s.h  ex_sss_objid.h  ex_sss_ports.h  ex_sss_scp03_keys.h  ex_sss_tp_scp03_keys.h
src/peripherals/se050/sss/ex/src/: ex_sss_boot.c  ex_sss_boot_connectstring.c  ex_sss_boot_int.h  ex_sss_se05x.c  ex_sss_se05x_auth.c
src/peripherals/se050/sss/inc/: fsl_sscp.h  fsl_sscp_a71ch.h  fsl_sscp_a71cl.h  fsl_sscp_commands.h  fsl_sscp_mu.h  fsl_sss_api.h  fsl_sss_api_ver.h  fsl_sss_config.h  fsl_sss_ftr_default.h  fsl_sss_keyid_map.h  fsl_sss_mbedtls_apis.h  fsl_sss_mbedtls_types.h  fsl_sss_openssl_apis.h  fsl_sss_openssl_types.h  fsl_sss_policy.h  fsl_sss_se05x_apis.h  fsl_sss_se05x_policy.h  fsl_sss_se05x_scp03.h  fsl_sss_se05x_types.h  fsl_sss_sscp.h  fsl_sss_util_asn1_der.h  fsl_sss_util_rsa_sign_utils.h
src/peripherals/se050/sss/plugin/mbedtls/: ecdh_alt_ax.c  ecp_alt_sss.c  sss_mbedtls.c  sss_mbedtls.h  sss_mbedtls_frdmk64f_config.h  sss_mbedtls_lpcxpresso55s69_config.h  sss_mbedtls_rsa.c  sss_mbedtls_x86_config.h
src/peripherals/se050/sss/port/ksdk/: fsl_sss_types.h
src/peripherals/se050/sss/src/: fsl_sss_apis.c  fsl_sss_util_asn1_der.c  fsl_sss_util_rsa_sign_utils.c
src/peripherals/se050/sss/src/mbedtls/: fsl_sss_mbedtls_apis.c
src/peripherals/se050/sss/src/se05x/: fsl_sss_se05x_apis.c  fsl_sss_se05x_fastscp.c  fsl_sss_se05x_mw.c  fsl_sss_se05x_policy.c  fsl_sss_se05x_scp03.c
src/peripherals/soft-se/: se-identity.h
src/radio/: CMakeLists.txt  multiRadio.h
src/radio/multiRfm96w/: multiRfm96w.c  multiRfm96w.h  multiRfm96wRegs-Fsk.h  multiRfm96wRegs-LoRa.h
src/radio/rfm96w/: rfm96w.c  rfm96w.h  rfm96wRegs-Fsk.h  rfm96wRegs-LoRa.h
src/system/: CMakeLists.txt  delay.c  gpio.h  i2c.c  uart.h
src/system/wait/: McuLib.h  McuLibconfig.h  McuWait.c  McuWait.h  McuWaitconfig.h
(+3 files in other folders)
